...

              const SizedBox(height: 10),

              /// Sign in title
              Center(
                child: Text(
                  'Sign in',
                  style: GoogleFonts.bitter(
                    fontSize: 28,
                    fontWeight: FontWeight.bold,
                    color: Colors.black,
                  ),
                ),
...
