...
              decoration: BoxDecoration(
                color: const Color.fromARGB(255, 42, 157, 143),
                borderRadius: BorderRadius.circular(15),
                border: Border.all(width: 2),
              ),
              child: const Text(
                "Add new personal story!",
                style: TextStyle(fontWeight: FontWeight.bold, fontSize: 18),
              ),
            ),
          ),
          const SizedBox(height: 32),
        ],
...
