...
                          onChanged: (value) {
                            setState(() {
                              searchName = value;
                            });
                          },
                          decoration: InputDecoration(
                            hintText: 'Search',
                            prefixIcon: Icon(Icons.search, color: Colors.black),
                            filled: true,
                            fillColor: Colors.white,
                            contentPadding: EdgeInsets.symmetric(
                              horizontal: 10,
                            ),
...
                  child: ElevatedButton(
                    onPressed: () {
                      setState(() {
                        filterEndorsement = !filterEndorsement;
                      });
                    },
                    child: Text('Endorsed?'),
                  ),
                ),
              ),

              //listview
              Expanded(
...
